# jewelry-description

./: # Plan: Convert example_usage.md  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_usage.py  jewelry_cost_calculator.py  pyproject.toml  run_examples.sh  short_materials.csv  Браслет_2025-06-15_00-45.md  Кафф_2025-06-15_00-40.md  Кольцо_2025-06-15_00-55.md  Кулон_2025-06-15_00-16.md  Кулон_2025-06-15_00-31.md  Кулон_2025-06-15_00-49.md  Кулон_2025-06-15_00-57.md  кольцо_2025-07-10_15-32.md
.rules/: python-project-rules.instructions.md
data/: materials.db
docs/: violations-report.md
examples/jewelry-samples/: Чокер_2025-06-15_00-37.md
jewelry/: Серьга_с_камушком_тигринного_глаза_2025-07-21_20-52.md  Чокер_со_срезом_из_агата_2025-07-21_20-46.md  кольцо_2025-07-21_20-10.md
old/: README.md  jewelry-price.mdc  make_short_materials_csv.py  short_materials.csv  браслет_2025-06-15_00-42.md
old_data/: info.csv  promt.md  Кольцо_2025-06-15_00-56.md  браслет_2025-06-15_00-34 copy.md  браслет_2025-06-15_00-34.md
scripts/: example_usage.py  run_web.py
src/jewelry_description/business/: description_service.py  interfaces.py  services.py
src/jewelry_description/config/: logging_config.py  settings.py
src/jewelry_description/entrypoints/: cli.py
src/jewelry_description/entrypoints/api/: main.py
src/jewelry_description/entrypoints/cli/: commands.py
src/jewelry_description/entrypoints/web/: __init__.py  dependencies.py  main.py
src/jewelry_description/entrypoints/web/templates/: index.html
src/jewelry_description/integrations/database/: __init__.py  repositories.py
src/jewelry_description/models/: entities.py  exceptions.py  value_objects.py
tests/: conftest.py  test_business.py
tests/e2e/: test_jewelry_calculator_e2e.py
tests/integration/: test_material_repository.py
tests/unit/: test_business_services.py  test_entities.py
