[project]
name = "jewelry-description"
version = "0.1.0"
description = "Jewelry price and description creator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.0",
    "typer>=0.12.3",
    "httpx>=0.28.1",
    "fastapi>=0.116.2",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.32.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17"
]

[project.scripts]
jewelry-web = "jewelry_description.entrypoints.web.main:main"

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
lint = ["ruff>=0.8.0", "mypy>=1.13.0"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true