# Required project metadata
[project]
name = "jewelry-description"
version = "0.1.0"
description = "Jewelry price and description creator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
]

[project.scripts]
jewelry-calc = "jewelry_description.entrypoints.cli.commands:app"

# Development dependency groups
[dependency-groups]
dev = [
    "pandas-stubs",
    "pytest>=8.4.1",
 "pytest-cov>=6.2.1",
]
lint = ["ruff>=0.8.0", "mypy>=1.13.0"]

# Build system (for libraries)
[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

# Basic tool configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
